--- a/src/main/resources/templates/buyers-update.html
+++ b/src/main/resources/templates/buyers-update.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<meta charset="UTF-8">
+<title>Create buyer</title>
 </head>
 <body>
-
+<form action="#" th:action="@{/buyers-update}" th:object="${buyer}" method="post">
+    <label for="buyerId">Buyer id</label>
+    <input readonly type="number" th:field="*{buyerId}" id="buyerId" placeholder="Buyer id">
+    <br/>
+    <label for="buyerId">Buyer name </label>
+    <input type="text" th:field="*{buyerName}" id="buyerName" placeholder=" Buyer name">
+    <br/>
+    <label for="buyerPhoneNumber">buyer Phone Number </label>
+    <input type="text" th:field="*{buyerPhoneNumber}" id="buyerPhoneNumber" placeholder="Buyer phone number ">
+    <label for="buyerAddress">buyer Address</label>
+    <input type="text" th:field="*{buyerAddress}" id="buyerAddress" placeholder="Buyer address">
+    <br/>
+    <input type="submit" value="Update Buyer">
+</form>
 </body>
 </html>
