Всё работает. Ошибки в апдейтах и делитах. Нет fk связей

--- a/src/main/resources/templates/buyers-update.html
+++ b/src/main/resources/templates/buyers-update.html
@@ -8,7 +8,7 @@
     <label for="buyerId">Buyer id</label>
     <input readonly type="number" th:field="*{buyerId}" id="buyerId" placeholder="Buyer id">
     <br/>
-    <label for="buyerId">Buyer name </label>
+    <label for="buyerName">Buyer name </label>
     <input type="text" th:field="*{buyerName}" id="buyerName" placeholder=" Buyer name">
     <br/>
     <label for="buyerPhoneNumber">buyer Phone Number </label>
