--- a/src/main/resources/templates/contract-list.html
+++ b/src/main/resources/templates/contract-list.html
@@ -1,37 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{fonts/icomoon/style.css}"/>
+    <link rel="stylesheet" th:href="@{css/owl.carousel.min.css}"/>
+    <link rel="stylesheet" th:href="@{css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{css/style.css}"/>
     <title>Contract List</title>
 </head>
 <body>
-<div th:switch="${contracts}">
-    <h2 th:case="null">No users found!</h2>
-    <div th:case="*">
-        <h2>Contracts</h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Contract number</th>
-                <th>Buyer id</th>
-                <th>Date of declaration</th>
-                <th>Date of execution</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="contract:${contracts}">
-                <td th:text="${contract.contractId}"></td>
-                <td th:text="${contract.buyerId}"></td>
-                <td th:text="${contract.DateOfDeclaration}"></td>
-                <td th:text="${contract.DateOfExecution}"></td>
-                <td><a th:href="@{contract-update/{id}(id=${contract.contractId})}">Edit</a></td>
-                <td><a th:href="@{contract-delete/{id}(id=${contract.contractId})}">Delete</a></td>
 
-            </tr>
-            </tbody>
-        </table>
+
+<div class="content">
+
+    <div class="container">
+        <h2 class="mb-5">Contract List</h2>
+        <div class="table-responsive custom-table-responsive">
+            <table class="table custom-table">
+                <thead>
+                <tr>
+                    <th>Contract number</th>
+                    <th>Buyer id</th>
+                    <th>Date of declaration</th>
+                    <th>Date of execution</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="contract:${contracts}">
+                    <td th:text="${contract.contractId}"></td>
+                    <td th:text="${contract.buyerId}"></td>
+                    <td th:text="${contract.DateOfDeclaration}"></td>
+                    <td th:text="${contract.DateOfExecution}"></td>
+                    <td><a th:href="@{contract-update/{id}(id=${contract.contractId})}">Edit</a></td>
+                    <td><a th:href="@{contract-delete/{id}(id=${contract.contractId})}">Delete</a></td>
+
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <p><a href="/contract-create">Create contract</a></p>
+
+
     </div>
-    <p><a href="/contract-create">Create contract</a></p>
+
 </div>
+
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
