--- a/src/main/resources/templates/realization-list.html
+++ b/src/main/resources/templates/realization-list.html
@@ -9,44 +9,35 @@
     <link rel="stylesheet" th:href="@{css/owl.carousel.min.css}" />
     <link rel="stylesheet" th:href="@{css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{css/style.css}" />
-    <title>Furniture List</title>
+    <title>Realization List</title>
 </head>
 <body>
 
-
 <div class="content">
-
     <div class="container">
-        <h2 class="mb-5">Furniture List</h2>
+        <h2 class="mb-5">Realization List</h2>
         <div class="table-responsive custom-table-responsive">
             <table class="table custom-table">
                 <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Color</th>
-                    <th>Price</th>
-                    <th>Description</th>
+                    <th>Contract id</th>
+                    <th>Model id</th>
+                    <th>Quantity</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="furniture:${furnitures}">
-                    <td th:text="${furniture.furnitureModelId}"></td>
-                    <td th:text="${furniture.modelName}"></td>
-                    <td th:text="${furniture.modelColor}"></td>
-                    <td th:text="${furniture.price}"></td>
-                    <td th:text="${furniture.description}"></td>
-                    <td><a th:href="@{furniture-update/{id}(id=${furniture.furnitureModelId})}">Edit</a></td>
-                    <td><a th:href="@{furniture-delete/{id}(id=${furniture.furnitureModelId})}">Delete</a></td>
+                <tr th:each="realization:${realizations}">
+                    <td th:text="${realization.fkContractId}"></td>
+                    <td th:text="${realization.fkModelId}"></td>
+                    <td th:text="${realization.quantity}"></td>
+                    <td><a th:href="@{realization-update/{id}(id=${realization.fkContractId})}">Edit</a></td>
+                    <td><a th:href="@{realization-delete/{id}(id=${realization.fkContractId})}">Delete</a></td>
                 </tr>
                 </tbody>
             </table>
+            <p><a href="/realization-create">Create realization</a></p>
         </div>
-        <p><a href="/furniture-create">Create furniture</a></p>
-
-
     </div>
-
 </div>
 
 <script src="js/jquery-3.3.1.min.js"></script>
