--- a/src/main/resources/templates/furniture-list.html
+++ b/src/main/resources/templates/furniture-list.html
@@ -9,9 +9,92 @@
     <link rel="stylesheet" th:href="@{css/owl.carousel.min.css}" />
     <link rel="stylesheet" th:href="@{css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{css/style.css}" />
+    <style>
+        @import url(https://fonts.googleapis.com/css?family=Lato);
+
+        *, *:before, *:after{
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+            font-family: 'Lato', sans-serif;
+        }
+
+        /*| Navigation |*/
+
+        nav{
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background:#212529;;
+            box-shadow: 0 3px 10px -2px rgba(0,0,0,.1);
+            border: 1px solid rgba(0,0,0,.1);
+        }
+        nav ul{
+            list-style: none;
+            position: relative;
+            float: right;
+            margin-right: 100px;
+            display: inline-table;
+        }
+        nav ul li{
+            float: left;
+            -webkit-transition: all .2s ease-in-out;
+            -moz-transition: all .2s ease-in-out;
+            transition: all .2s ease-in-out;
+        }
+
+        nav ul li:hover{background: rgba(0,0,0,.15);}
+        nav ul li:hover > ul{display: block;}
+        nav ul li{
+            float: left;
+            -webkit-transition: all .2s ease-in-out;
+            -moz-transition: all .2s ease-in-out;
+            transition: all .2s ease-in-out;
+        }
+        nav ul li a{
+            display: block;
+            padding: 25px 30px;
+            color: #fff;
+            font-size: .9em;
+            letter-spacing: 1px;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+        nav ul ul{
+            display: none;
+            background: #212529;;
+            position: absolute;
+            top: 100%;
+            box-shadow: -3px 3px 10px -2px rgba(0,0,0,.1);
+            border: 1px solid rgba(0,0,0,.1);
+        }
+        nav ul ul li{float: none; position: relative;}
+        nav ul ul li a {
+            padding: 15px 30px;
+            border-bottom: 5px solid rgba(0,0,0,.05);
+        }
+        nav ul ul ul {
+            position: absolute;
+            left: 100%;
+            top:0;
+        }
+    </style>
     <title>Furniture List</title>
 </head>
 <body>
+<nav role='navigation'>
+    <ul>
+        <li><a href="/buyers"> Buyers</a>
+        <li><a href="/contracts"> Contract</a>
+        <li><a href="/furnitures"> Furniture</a>
+        <li><a href="/realizations"> Realization</a>
+    </ul>
+</nav>
+
+<div class="content" align="center">
 
 
 <div class="content">
